...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/createAccountTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Create Account"
        android:textColor="@color/text_primary"
                android:textSize="38sp"
                android:textStyle="bold" />
...
